--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -12,6 +12,8 @@ install:
   # запускаем SUT (& означает, что в фоновом режиме не блокируем терминал для запуска тестов)
   - java -jar ./artifacts/app-order.jar &
 
+  -
 build_script:
-  - chmod +x gradlew
-  - ./gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
+  -./gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
+  - chmod +x gradlew #- ./gradlew test -Dselenide.headless=true
+  -./gradlew test -Dselenide.headless=true
