--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,9 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.6.1'
-    testImplementation 'com.codeborne:selenide:5.19.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
+    implementation 'org.seleniumhq.selenium:selenium-java:4.4.0'
+    testImplementation 'com.codeborne:selenide:6.9.0'
 }
 
 test {
