--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -14,7 +14,7 @@ install:
 
   -
 build_script:
-  -./gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
- # -./gradlew test -Dselenide.headless=true
-  - chmod +x gradlew #- ./gradlew test -Dselenide.headless=true
+ -./gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
+ -./gradlew test -Dselenide.headless=true
+  #- chmod +x gradlew #- ./gradlew test -Dselenide.headless=true
 
