--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -15,6 +15,5 @@ install:
   -
 build_script:
  -./gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
- -./gradlew test -Dselenide.headless=true
-  #- chmod +x gradlew #- ./gradlew test -Dselenide.headless=true
+ - chmod +x gradlew #- ./gradlew test -Dselenide.headless=true
 
