--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ repositories {
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
-    implementation 'org.seleniumhq.selenium:selenium-java:4.5.3'
+    testImplementation 'org.seleniumhq.selenium:selenium-java:4.6.0'
     testImplementation 'com.codeborne:selenide:6.9.0'
     testImplementation("io.github.bonigarcia:webdrivermanager:5.3.1")
 }
