--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
     testImplementation 'com.codeborne:selenide:6.9.0'
-    testImplementation'io.github.bonigarcia:webdrivermanager:5.3.1'
+    testImplementation ("io.github.bonigarcia:webdrivermanager:5.3.1")
 }
 
 test {
