--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,9 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
     testImplementation 'com.codeborne:selenide:6.9.0'
-    testImplementation ("io.github.bonigarcia:webdrivermanager:5.3.1")
+    testImplementation 'com.github.javafaker:javafaker:1.0.2'
+    testImplementation 'io.rest-assured:rest-assured:5.2.0'
+    testImplementation 'com.google.code.gson:gson:2.10'
 }
 
 test {
