--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -14,6 +14,6 @@ install:
 
 
 build_script:
-  - - chmod +x gradlew
+  - chmod +x gradlew
   #- ./gradlew test --info
   - ./gradlew test -Dselenide.headless=true --info
